# ryuu

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench.rs
examples/: upstream_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ryu.rs  fuzz_ryuu.rs
src/: buffer.rs  common.rs  d2s.rs  d2s_intrinsics.rs  d2s_small_table.rs  f2s.rs  f2s_intrinsics.rs  format.rs  lib.rs  parse.rs  pretty.rs  raw.rs  s2d.rs  s2f.rs
src/buffer/: mod.rs
src/pretty/: exponent.rs  mantissa.rs  mod.rs
src/raw/: exponent.rs  mantissa.rs
tests/: d2s_intrinsics_test.rs  d2s_test.rs  exhaustive.rs  f2s_test.rs  s2d_test.rs
tests/macros/: mod.rs
unittests/: buffer_copy_to_bytes.rs  common_test.rs  d2s_intrinsics_test.rs  d2s_table_test.rs  s2d_test.rs  s2f_test.rs
