[package]
name = "ryuu"
version = "2.0.0-alpha.2"
edition = "2021"
rust-version = "1.83.0"

# === Publication info ===
authors = ["David Tolnay <dtolnay@gmail.com>", "Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point to string conversion"
keywords = ["float"]
documentation = "https://docs.rs/ryuu"
license = "Apache-2.0 OR BSL-1.0"
repository = "https://github.com/hanyu-dev/ryuu"
readme = "README.md"
exclude = ["build.rs", "performance.png", "chart/**"]

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

# Experimental parsing functions.
feat-exp-parse = []

[dependencies]
const_for = "0.1.5"

[dev-dependencies]
criterion = "0.7.0"
num_cpus = "1.8"
rand = "0.9"
rand_xorshift = "0.4"
ryu = "1.0.20"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[[bench]]
name = "bench"
harness = false

# For release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "abort"
strip = true
