[workspace]

[package]
name = "ryuu-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_ryuu"
path = "fuzz_targets/fuzz_ryuu.rs"
test = false
doc = false

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
ryuu = { path = ".." }

[features]
small = ["ryuu/small"]
